# oblivious_unlearning

./: 1st_campaign  Cargo.toml  README.md  launcher.sh  notebook.ipynb
data/: QUANTIZE_README.md  iris_2bits.csv  iris_3bits.csv  iris_4bits.csv  iris_5bits.csv  iris_fd_3bits.csv  iris_fd_4bits.csv  iris_non_uni_2bits.csv  iris_non_uni_3bits.csv  iris_non_uni_4bits.csv  iris_non_uni_5bits.csv  quantize_dataset.py  wine_4bits.csv
logs/: iris_2bits_3_1.csv  iris_2bits_3_10.csv  iris_4bits_3_64.csv  iris_4bits_4_64.csv  wine_4bits_3_64.csv  wine_4bits_4_64.csv
logs_1st_campaign/: iris_2bits_4d_10m_clear.csv  iris_2bits_4d_10m_probolut.csv  iris_2bits_4d_40m_clear.csv  iris_2bits_4d_40m_probolut.csv  iris_2bits_4d_60m_clear.csv  iris_2bits_4d_60m_probolut.csv  iris_3bits_4d_10m_clear.csv  iris_3bits_4d_10m_probolut.csv  iris_3bits_4d_40m_clear.csv  iris_3bits_4d_40m_probolut.csv  iris_3bits_4d_60m_clear.csv  iris_3bits_4d_60m_probolut.csv  iris_4bits_4d_10m_clear.csv  iris_4bits_4d_10m_probolut.csv  iris_4bits_4d_40m_clear.csv  iris_4bits_4d_40m_probolut.csv  iris_4bits_4d_60m_clear.csv  iris_4bits_4d_60m_probolut.csv  iris_5bits_4d_10m_clear.csv  iris_5bits_4d_10m_probolut.csv  iris_5bits_4d_40m_clear.csv  iris_5bits_4d_40m_probolut.csv  iris_5bits_4d_60m_clear.csv  iris_5bits_4d_60m_probolut.csv  iris_non_uni_2bits_4d_10m_clear.csv  iris_non_uni_2bits_4d_10m_probolut.csv  iris_non_uni_2bits_4d_40m_clear.csv  iris_non_uni_2bits_4d_40m_probolut.csv  iris_non_uni_2bits_4d_60m_clear.csv  iris_non_uni_2bits_4d_60m_probolut.csv  iris_non_uni_3bits_4d_10m_clear.csv  (+9 more)
(+146 files in other folders)
