[package]
name = "tfhe-rs-pdte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.6.1", features = ["boolean", "shortint", "aarch64-unix"] }
[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.6.1", features = ["boolean", "shortint", "x86_64-unix"] }


[dependencies]

num-complex = "0.4.0"
arrayvec = "0.7.2"
aligned-vec = "0.5.0"
rayon = "1.6.1"
concrete-csprng = "0.4.0"
dyn-stack = "0.9.1"
itertools = "0.13.0"
concrete-fft = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
csv = "1.1.0"
# revolut = { path = "/Users/sofianeazogagh/Desktop/revoLUT" }
revolut = { git = "https://github.com/sofianeazogagh/revoLUT.git", branch = "main" }
indicatif = "0.17.0"
clap = { version = "4.2", features = ["derive"] }
